--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     rel="stylesheet"
   />
   <link rel="stylesheet" href="styles.css" />
-  <script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
+  <!--<script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>-->
   <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
   <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
 </head>
