--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <a-scene embedded arjs='sourceType: webcam; debugUIEnabled: false;
   detectionMode: mono_and_matrix; matrixCodeType: 3x3 renderer='antialias: true
   renderer='logarithmicDepthBuffer: true;' shadow="type: pcfsoft"
-  gltf-model="dracoDecoderPath: https://www.gstatic.com/draco/v1/decoders/"> ​
+  gltf-model="dracoDecoderPath: https://cors-anywhere.herokuapp.com/https://www.gstatic.com/draco/v1/decoders/"> ​
 
   <a-nft
     type="nft"
