--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     
     <div id="card">
      <model-viewer id ="chair"
-      camera-controls src="https://cors-anywhere.herokuapp.com/https://chairar.netlify.app/SheenChair.glb"
+      camera-controls src="/SheenChair.glb"
       alt="A 3D model of a shoe" 
       ar camera-orbit="33deg 67deg auto"
       ios-src="/chair-varient.usdz" shadow-intensity="1">
