--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <//>
     <div id="card">
      <model-viewer id ="MODEL2"
-      camera-controls src="/chair.glb"
+      camera-controls src="/Chair.glb"
       alt="A 3D model of a shoe" 
       ar camera-orbit="33deg 67deg auto"
       ios-src="/chair-varient.usdz" shadow-intensity="1">
