--- a/index.html
+++ b/index.html
@@ -30,19 +30,19 @@
   </model-viewer>
 </div>
   <//>
-    <!--<div id="card">
+    <div id="card">
      <model-viewer id ="MODEL2"
-      camera-controls src="/Chair.glb"
+      camera-controls src="/BED_NEW_CLOSED.glb"
       alt="A 3D model of a shoe" 
       ar camera-orbit="33deg 67deg auto"
-      ios-src="/chair-varient.usdz" shadow-intensity="1">
+      ios-src="/NEW_BED_CLOSED.usdz" ar-scale="fixed" shadow-intensity="1">
       <button slot="ar-button" class="ar-button">View in your space</button>
       <div id="ar-prompt">
         <img src="https://cdn.khronos.org/assets/blog/live-gltf-asset-editing-in-your-browsereven-in-ar/hand.png">
       </div>
        <div class="control">
          <div>Variant: <select id="variant"></select></div>
-       </div>-->
+       </div>
  <//>
   </model-viewer>
 </div>
@@ -66,7 +66,7 @@
     <script>
       const modelViewerVariants = document.querySelector("model-viewer#chair");
       
-       <!--const modelViewerVariants = document.querySelector("model-viewer#MODEL2");-->
+       const modelViewerVariants = document.querySelector("model-viewer#MODEL2");
       
       const select = document.querySelector('#variant');
       modelViewerVariants.addEventListener('load', () => {
