--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
      <model-viewer id ="chair"
       camera-controls src="/BED_NEW.glb"
       alt="A 3D model of a shoe" 
-      ar ar-placement="wall" ar-modes="webxr scene-viewer quick-look" camera-orbit="33deg 67deg auto"
+      ar ar-placement="wall" ar-placement="floor" ar-modes="webxr scene-viewer quick-look" camera-orbit="33deg 67deg auto"
       ios-src="/NEW_BED.usdz" ar-scale="fixed" shadow-intensity="1">
       <button slot="ar-button" class="ar-button">View in your space</button>
       <div id="ar-prompt">
@@ -38,7 +38,7 @@
      <model-viewer id ="MODEL2"
       camera-controls src="/BED_NEW_CLOSED.glb"
       alt="A 3D model of a shoe" 
-      ar ar-placement="wall" ar-modes="webxr scene-viewer quick-look" camera-orbit="33deg 67deg auto"
+      ar ar-placement="wall" ar-placement="floor" ar-modes="webxr scene-viewer quick-look" camera-orbit="33deg 67deg auto"
       ios-src="/NEW_BED_CLOSED.usdz" ar-scale="fixed" shadow-intensity="1">
       <button slot="ar-button" class="ar-button">View in your space</button>
       <div id="ar-prompt">
