--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
      <model-viewer id ="chair"
       camera-controls src="/BED_NEW.glb"
       alt="A 3D model of a shoe" 
-      ar ar-placement="wall" ar-placement="floor" ar-modes="scene-viewer webxr quick-look" camera-orbit="0deg 0deg auto"
-      ios-src="/NEW_BED.usdz" ar-scale="fixed" shadow-intensity="1">
+      ar ar-placement="wall" ar-placement="floor" ar-modes="scene-viewer webxr quick-look" camera-orbit="0deg 90deg auto"
+      ios-src="/NEW_BED.usdz" shadow-intensity="1">
       <button slot="ar-button" class="ar-button">View in your space</button>
       <div id="ar-prompt">
         <img src="https://cdn.khronos.org/assets/blog/live-gltf-asset-editing-in-your-browsereven-in-ar/hand.png">
@@ -38,8 +38,8 @@
      <model-viewer id ="MODEL2"
       camera-controls src="/BED_NEW_CLOSED.glb"
       alt="A 3D model of a shoe" 
-      ar ar-placement="wall" ar-placement="floor" ar-modes="scene-viewer webxr quick-look" camera-orbit="0deg 0deg auto"
-      ios-src="/NEW_BED_CLOSED.usdz" ar-scale="fixed" shadow-intensity="1">
+      ar ar-placement="wall" ar-placement="floor" ar-modes="scene-viewer webxr quick-look" camera-orbit="0deg 90deg auto"
+      ios-src="/NEW_BED_CLOSED.usdz" shadow-intensity="1">
       <button slot="ar-button" class="ar-button">View in your space</button>
       <div id="ar-prompt">
         <img src="https://cdn.khronos.org/assets/blog/live-gltf-asset-editing-in-your-browsereven-in-ar/hand.png">
